# mcp-local-rag

./: .gitignore  .mcp-local-rag-ignore  .mcp-local-rag-ignore.example  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_SETUP.md  README.md  config.json  pyproject.toml  requirements.txt  run.sh  run_quiet.sh  server.py  setup.sh  stop.sh  test_performance.sh
examples/: index_directory.py  search_codebase.py
scripts/: count_candidates.sh  debug_chroma.py  setup_index.py
src/: discovery.py  embeddings.py  indexer.py  search.py  utils.py  vectordb.py
tests/: test_direct_search.py  test_discovery.py  test_embeddings.py  test_file_watcher.py  test_indexer.py  test_mcp_tools.py  test_search.py  test_search_unit.py  test_server.py  test_vectordb.py
